tests/snapshots/render_dashboard__agent_badge_001_codex_on.snap
---
source: tests/render_dashboard.rs
expression: buffer_to_color_text(&on)
---
[Blue/Reset]"┌" [Reset/Reset]" 1 " [LightYellow/Reset]"Codex" [Blue/Reset]"───────────────────────────────────────────────────────── ● Thinking ┐"
[Blue/Reset]"│" [LightRed/Reset]"wrapped-01" [Blue/Reset]"│"
[Blue/Reset]"│" [Reset/Reset]"Dir:  workspace                                                               " [Blue/Reset]"│"
[Blue/Reset]"│" [Reset/Reset]"Prmt: inspect the repository                                                  " [Blue/Reset]"│"
[Blue/Reset]"│" [Blue/Reset]"│"
[Blue/Reset]"│" [Blue/Reset]"│"
[Blue/Reset]"│" [Blue/Reset]"│"
[Blue/Reset]"│" [Blue/Reset]"│"
[Blue/Reset]"└──────────────────────────────────────────────────────────" [Reset/Reset]" Last: 0s  Tools: 0 " [Blue/Reset]"┘"
