tests/snapshots/render_dashboard__card_stats_002_narrow_card_degrades_label_without_overrunning_corners.snap
---
source: tests/render_dashboard.rs
expression: rendered
---
┌ 1 ap… ● Thinking ┐
│Dir:  api-svc     │
│Prmt: move the st…│
│                  │
└─── 1h · 14 tools ┘
