tests/snapshots/render_dashboard__density_005_spacious_idle_shows_flashing_dot_over_card_content.snap
---
source: tests/render_dashboard.rs
expression: flash_on
---
┌ 1 example-coder ───────────────────────────────────────────────────── ● Idle ┐
│Dir:  example-project                                                         │
│Prmt: first prompt                                                            │
│      second prompt                                                           │
│      third prompt                                                            │
│                                                                              │
│  Read — src/main.rs                                                          │
│  Edit — src/ui.rs                                                            │
│  Bash — cargo test                                                           │
└───────────────────────────────────────────────────────── Last: 1h  Tools: 12 ┘
