tests/snapshots/render_dashboard__grid_001_short_deck_still_paints_every_role.snap
---
source: tests/render_dashboard.rs
expression: rendered
---
 worker-deck — 7 session(s)                                                               
┏ ▸ 1 ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━ ● Idle ┓┌ 2 ──────────────────────────────── ● Idle ┐
┃orchestrator                               ┃│developer                                  │
┃Dir:  dot-agent-deck                       ┃│Dir:  dot-agent-deck                       │
┃                                           ┃│                                           │
┃                                           ┃│                                           │
┗━━━━━━━━━━━━━━━━━━━━━━━ Last: 0s  Tools: 0 ┛└─────────────────────── Last: 0s  Tools: 0 ┘
┌ 3 ──────────────────────────────── ● Idle ┐┌ 4 ──────────────────────────────── ● Idle ┐
│tester                                     ││reviewer                                   │
│Dir:  dot-agent-deck                       ││Dir:  dot-agent-deck                       │
│                                           ││                                           │
│                                           ││                                           │
└─────────────────────── Last: 0s  Tools: 0 ┘└─────────────────────── Last: 0s  Tools: 0 ┘
┌ 5 ──────────────────────────────── ● Idle ┐┌ 6 ──────────────────────────────── ● Idle ┐
│releaser                                   ││researcher                                 │
│Dir:  dot-agent-deck                       ││Dir:  dot-agent-deck                       │
│                                           ││                                           │
│                                           ││                                           │
└─────────────────────── Last: 0s  Tools: 0 ┘└─────────────────────── Last: 0s  Tools: 0 ┘
┌ 7 ──────────────────────────────── ● Idle ┐                                             
│documenter                                 │                                             
│Dir:  dot-agent-deck                       │                                             
│                                           │                                             
│                                           │                                             
└─────────────────────── Last: 0s  Tools: 0 ┘
