tests/snapshots/render_dashboard__grid_003_unavoidable_overflow_is_signalled.snap
---
source: tests/render_dashboard.rs
expression: rendered
---
 worker-deck — 7 session(s)  (↓5)                                                         
┏ ▸ 1 ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━ ● Idle ┓┌ 2 ──────────────────────────────── ● Idle ┐
┃orchestrator  Dir: dot-agent-deck          ┃│developer  Dir: dot-agent-deck             │
┗━━━━━━━━━━━━━━━━━━━━━━━ Last: 0s  Tools: 0 ┛└─────────────────────── Last: 0s  Tools: 0 ┘
