tests/snapshots/render_dashboard__pane_005_highlight_follows_selected_session_id.snap
---
source: tests/render_dashboard.rs
expression: buffer_to_text(&buffer)
---
┌ 1 example-alpha ────────────────────────────────────────────────── ● Working ┐
│Dir:  alpha                                                                   │
│Prmt: do the thing                                                            │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
└────────────────────────────────────────────────────────── Last: 0s  Tools: 3 ┘
┏ ▸ 2 example-beta ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━ ● Working ┓
┃Dir:  beta                                                                    ┃
┃Prmt: do the thing                                                            ┃
┃                                                                              ┃
┃                                                                              ┃
┃                                                                              ┃
┃                                                                              ┃
┗━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━ Last: 0s  Tools: 3 ┛
┌ 3 example-gamma ────────────────────────────────────────────────── ● Working ┐
│Dir:  gamma                                                                   │
│Prmt: do the thing                                                            │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
└────────────────────────────────────────────────────────── Last: 0s  Tools: 3 ┘
