tests/snapshots/render_dashboard__pane_006_card_fields_and_full_width_ellipsized_dir.snap
---
source: tests/render_dashboard.rs
expression: rendered
---
┌ 1 api-svc ───────────────────────── ● Thinking ┐
│Dir:  this-is-an-extremely-long-project-directo…│
│Prmt: move the stats into the border            │
│                                                │
│                                                │
│                                                │
│                                                │
└─────────────────────────── Last: 1h  Tools: 14 ┘
