tests/snapshots/render_dashboard__pane_008_codex_card_omits_agent_type_badge.snap
---
source: tests/render_dashboard.rs
expression: buffer_to_color_text(&buffer)
---
[Blue/Reset]"┌" [Reset/Reset]" 1 " [Blue/Reset]"─────────────────────────────────────────────────────────────── ● Thinking ┐"
[Blue/Reset]"│" [LightRed/Reset]"wrapped-01" [Blue/Reset]"│"
[Blue/Reset]"│" [Reset/Reset]"Dir:  workspace                                                               " [Blue/Reset]"│"
[Blue/Reset]"│" [Reset/Reset]"Prmt: inspect the repository                                                  " [Blue/Reset]"│"
[Blue/Reset]"│" [Blue/Reset]"│"
[Blue/Reset]"│" [Blue/Reset]"│"
[Blue/Reset]"│" [Blue/Reset]"│"
[Blue/Reset]"│" [Blue/Reset]"│"
[Blue/Reset]"└──────────────────────────────────────────────────────────" [Reset/Reset]" Last: 0s  Tools: 0 " [Blue/Reset]"┘"
